Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • Files Files
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 383
    • Issues 383
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 56
    • Merge requests 56
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GNOMEGNOME
  • FilesFiles
  • Issues
  • #2052
Closed
Open
Issue created Dec 10, 2021 by António Fernandes@antoniof🐚Maintainer

Archives created with "Compress..." are not added to the Recent files list

Affected version

  • Nightly flatpak: Yes
  • Other: 41 from Fedora repos.

Steps to reproduce

  1. Select files and open the context menu (right click).
  2. Choose the "Compress..." action, set a name and create.
  3. Go to "Recent" location in sidebar.

Current behavior

The recently created compressed archive is not found in the Recent list.

Expected behavior

The recently created compress archive is at the top of the Recent list.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking