nautilus-files-view: Add compressed archives to Recent files

Archives created with "Compress..." are not added to the Recent files
list. The recently created compressed archive is not found in the
Recent list.

This patch adds the newly compressed archive resource to the Recent
files list.

Fixes https://gitlab.gnome.org/GNOME/nautilus/-/issues/2052